--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,84 @@
 apply plugin: 'com.android.application'
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+def getMyStoreFile(){
+    if("true".equals(IS_JENKINS)){
+        return file("使用Jenkins打包时的证书路径")
+    }else{
+        return file("I:/个人/我的Android签名/zyn_key.keystore")
+    }
+}
+
 android {
-    compileSdkVersion 26
+    signingConfigs {
+        release {
+            keyAlias '测试签名'
+            keyPassword '123456'
+            storeFile getMyStoreFile()
+            storePassword '123456'
+        }
+    }
+    compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    dexOptions {
+        jumboMode true
+    }
     defaultConfig {
-        applicationId "com.zyn.jenkinstest"
-        minSdkVersion 22
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        applicationId project.APPLICATION_ID
+        minSdkVersion Integer.parseInt(project.ANDROID_BUILD_MIN_SDK_VERSION)
+        targetSdkVersion Integer.parseInt(project.ANDROID_BUILD_TARGET_SDK_VERSION)
+        versionName project.APP_VERSION
+        versionCode Integer.parseInt(project.VERSION_CODE)
+        ndk {
+            abiFilters "armeabi", "armeabi-v7a", "arm64-v8a", "mips", "mips64", "x86", "x86_64"
+        }
+        // Enabling multidex support.
+        multiDexEnabled true
     }
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            shrinkResources false
+            signingConfig signingConfigs.release
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+        release {
+            // 移除无用的resource文件
+            shrinkResources true
+            minifyEnabled true
+            signingConfig signingConfigs.release
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            outputFileName = "JenkinsTest" + "-" + defaultConfig.versionName + "-" + BUILD_TYPE + ".apk"
+        }
+    }
+    flavorDimensions("channel")
+    productFlavors {
+        yingyongbao { dimension "channel" }
+    }
+    productFlavors.all {
+        flavor -> flavor.manifestPlaceholders = [CHANNEL_VALUE: name]
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES.txt'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/dependencies.txt'
+        exclude 'META-INF/LGPL2.1'
+    }
+    buildToolsVersion '27.0.3'
 }
 
 dependencies {
