--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,30 @@
 
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx1536m
 
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+org.gradle.daemon=true
+org.gradle.parallel=true
+manifestmerger.enabled=true
+android.useDeprecatedNdk=true
+org.gradle.configureondemand=true
+org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=4096m -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+
+ANDROID_BUILD_MIN_SDK_VERSION=22
+ANDROID_BUILD_TOOLS_VERSION=25.0.1
+ANDROID_BUILD_TARGET_SDK_VERSION=26
+ANDROID_BUILD_SDK_VERSION=26
+VERSION_CODE=176
+APPLICATION_ID=com.zyn.jenkinstest
+
+#jenkins中用到的变量
+NODEJS_ADDRESS=http://www.baidu.com
+API_VERSION=1.0.0
+APP_VERSION=1.0.0
+IS_JENKINS=false
+BUILD_PATH=I\:/Object/Android/AndroidCode/JenkinsTest/app/build/outputs
+BUILD_TYPE=Debug
