--- a/gradle.properties
+++ b/gradle.properties
@@ -25,12 +25,10 @@ org.gradle.jvmargs=-Xmx4096m -XX\:MaxPermSize\=4096m -XX\:+HeapDumpOnOutOfMemory
 ANDROID_BUILD_MIN_SDK_VERSION=22
 ANDROID_BUILD_TARGET_SDK_VERSION=26
 ANDROID_BUILD_SDK_VERSION=26
-VERSION_CODE=176
+ANDROID_BUILD_TOOLS_VERSION=27.0.3
 APPLICATION_ID=com.zyn.jenkinstest
 
 #jenkins中用到的变量
-NODEJS_ADDRESS=http://www.baidu.com
 API_VERSION=1.0.0
 APP_VERSION=1.0.0
-IS_JENKINS=false
-BUILD_TYPE=Debug
+VERSION_CODE=1
